# wisevision_msgs

./: .licenserc.json  Dockerfile  README.md
.github/workflows/: check_license.yml  docker_images.yaml  ros2_ci.yaml  sync_main_to_dev.yml  trigger_build_image.yml
lds02_msgs/: CMakeLists.txt  package.xml
lds02_msgs/msg/: LDS02Downlink.msg  LDS02Uplink.msg
lora_msgs/: CMakeLists.txt  Dockerfile  package.xml
lora_msgs/.github/workflows/: docker_image.yaml  ros2_ci.yaml
lora_msgs/msg/: AddSensorRequest.msg  AddSensorResponse.msg  AddSubscriberActionRequest.msg  AddSubscriberActionResponse.msg  AddSubscriberRequest.msg  AddSubscriberResponse.msg  AutomaticActionCombinedRequestAndTime.msg  AutomaticActionRequestAndTime.msg  ChangeSensorRequest.msg  ChangeSensorResponse.msg  DeleteSensorRequest.msg  DeleteSensorResponse.msg  DeleteSubscriberRequest.msg  DeleteSubscriberResponse.msg  Downlink.msg  E5BoardDownlink.msg  E5BoardUplink.msg  E5GenericMessage.msg  E5Messages.msg  EUI64.msg  FullDateTime.msg  GatewayStatus.msg  GpsDeviceData.msg  I2cCommSpec.msg  MicroPublisher.msg  MicroPublisherExtended.msg  Qos.msg  SensorCommSpec.msg  SensorDriver.msg  SubscribedTopic.msg  TempPressureBinary.msg  UartCommSpec.msg  Uplink.msg
lora_msgs/srv/: AddSensor.srv  AddSubscriber.srv  AddSubscriberAction.srv  AutomaticAction.srv  AutomaticActionCombinedDelete.srv  AutomaticActionConnection.srv  AutomaticActionDelete.srv  AvailableTopics.srv  AvailableTopicsCombined.srv  ChangeAutomaticAction.srv  ChangeAutomaticActionCombined.srv  ChangeSetup.srv  DeleteSensor.srv  DeleteSubscriber.srv  GetMessages.srv
notification_msgs/: CMakeLists.txt  package.xml
notification_msgs/msg/: Notification.msg
wisevision_msgs/: CMakeLists.txt  package.xml
wisevision_msgs/action/: InfluxPlayRecordedBag.action  InfluxRecordBag.action  InfluxResumeRecordBag.action  InfluxStartRecordBag.action
wisevision_msgs/msg/: GpsDevicesPublisher.msg
wisevision_msgs/srv/: AddDataToDataBase.srv  AddGpsDevice.srv  AddStorageToDataBase.srv  CreateDataBase.srv  DeleteDataFromDataBase.srv  DeleteGpsDevice.srv  GetRecordedBags.srv  InfluxChangeBucketRetention.srv  InfluxCreateBucket.srv  InfluxGetBuckets.srv  InfluxGetCurrentlyPlayingTopics.srv  InfluxGetCurrentlyRecordingTopics.srv  InfluxGetMessages.srv  InfluxGetPendingRecordingTopics.srv  InfluxGetRecordedBagsByTopic.srv  InfluxGetRecordedTopicsWithBucketsName.srv  InfluxPlayRecordings.srv  InfluxStartRecordTopics.srv  InfluxStopPlayingTopics.srv  InfluxStopRecordTopics.srv  ModifyGpsDevice.srv  RecordTopics.srv
