<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wisevision_msgs</name>
  <version>0.0.0</version>
  <description>wisevision_msgs pack</description>
  <maintainer email="czarekkwwa@gmail.com">cezary</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>lora_msgs</exec_depend>
  <exec_depend>notification_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
